# CGGD-F22

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: check.yml
libs/d3dx12/: readme.md
models/: README.md
shaders/: shaders.hlsl
src/: main.cpp  resource.h  settings.cpp  settings.h  win_main.cpp
src/renderer/: renderer.cpp  renderer.h
src/renderer/dx12/: dx12_renderer.cpp  dx12_renderer.h
src/renderer/rasterizer/: rasterizer.h  rasterizer_renderer.cpp  rasterizer_renderer.h
src/renderer/raytracer/: raytracer.h  raytracer_renderer.cpp  raytracer_renderer.h
src/utils/: com_error_handler.h  error_handler.h  resource_utils.cpp  resource_utils.h  window.cpp  window.h
src/world/: camera.cpp  camera.h  model.cpp  model.h
